# Ferrum-Engine

./: .gitignore  Cargo.toml  README.md  build.sh  todo
examples/: bouncy_castle.rs  catapult.rs  empty.rs  explosion.rs  harmonic_oscillator.rs  pendulum.rs  pi.rs  simple_spring.rs  slope.rs  springs.rs  stable_standing.rs  weld_joint.rs  weld_joint_test.rs
src/: app.rs  body_builder.rs  collision_detection.rs  collision_resolution.rs  color.rs  egui_tools.rs  energy.rs  enums.rs  gui.rs  input.rs  lib.rs  main.rs  math.rs  ode_solver.rs  physics.rs  pivot_joint.rs  render.rs  rigidbody.rs  shader.rs  spring.rs  square.rs  timing.rs  utility.rs  weld_joint.rs  world.rs  world_init.rs
src/shaders/: shader.wgsl
