[package]
name = "ferrum_engine"
version = "0.3.1"
edition = "2024"

[dependencies]
rand = "0.9.2"
pollster = "0.4.0"
bytemuck = "1.23.1"
egui = "0.31.1"
egui-wgpu = { version = "0.31.1",features = ["winit"] }
egui-winit = "0.31.1"
winit = "0.30.9"
glam = { version = "0.30.5", features = ["bytemuck"] }
colors-transform = "0.2.11"